PR comment fixings.

--- a/src/components/BeeFrame/BeeFrame.mdx
+++ b/src/components/BeeFrame/BeeFrame.mdx
@@ -5,6 +5,8 @@ import { BeeFrame } from "./"
 
 A `BeeFrame` is used when you want to highlight some text with a friendly bee.
 
+**NOTE:** This component should be deleted once we have a more sensible first example.
+
 ## Properties
 
 <PropsTable of={BeeFrame} />
