--- a/packages/components/TextField/TextField.mdx
+++ b/packages/components/TextField/TextField.mdx
@@ -2,8 +2,8 @@
 name: Text field
 ---
 
-import { Playground, PropsTable } from 'docz'
-import TextField from './TextField'
+import { Playground, PropsTable } from 'docz';
+import TextField from './TextField';
 
 # Text Field
 
@@ -14,30 +14,14 @@ import TextField from './TextField'
 The TextField component is a wrapper for an input and label with support for error states and adornments.
 
 <Playground>
-  <TextField
-    id="field_small"
-    label="Small placeholder field"
-    size="small"
-  />
-  <TextField
-    id="field_normal"
-    label="Placeholder field"
-  />
-  <TextField
-    id="field_large"
-    label="Large placeholder field"
-    size="large"
-  />
+  <TextField name="field_small" label="Small placeholder field" size="small" />
+  <TextField name="field_normal" label="Placeholder field" />
+  <TextField name="field_large" label="Large placeholder field" size="large" />
 </Playground>
 
 <Playground>
-  <TextField
-    id="field2"
-    label="Multiline placeholder field"
-    multiline
-  />
+  <TextField name="field2" label="Multiline placeholder field" multiline />
 </Playground>
-
 
 ## Properties
 
