Use real css variables

--- a/README.mdx
+++ b/README.mdx
@@ -4,4 +4,17 @@ route: /
 order: 1
 ---
 
-# 🔱 Welcome to Atlantis
+# 🔱 Atlantis
+
+## Getting Started
+
+- `npm install`
+- `npm start`
+
+## Tests
+
+- `npm test`
+
+You can auto-fix many linting issues with:
+
+- `npm run fix`
