Cleanup custom css

--- a/packages/styles/Colors.mdx
+++ b/packages/styles/Colors.mdx
@@ -5,7 +5,7 @@ route: /style/custom-css-properties
 ---
 
 import { PropsTable } from "docz";
-import { customProperties } from "./custom-properties";
+import { customProperties } from "./lib/custom-properties";
 
 # 🔱 Atlantis Colors
 
