Implement small and large sizes

--- a/packages/components/src/PlaceholderField.mdx
+++ b/packages/components/src/PlaceholderField.mdx
@@ -17,5 +17,14 @@ Placeholder fields are a web component that use an auto-generated `<label>` to s
 ## Basic Placeholder Field
 
 <Playground>
-  <PlaceholderField placeholder="Placeholder field input" />
+  <PlaceholderField size="small" placeholder="Small input" />
+  <PlaceholderField placeholder="Normal input" />
+  <PlaceholderField size="large" placeholder="Large input" />
+</Playground>
+
+
+## Placeholder Field States
+
+<Playground>
+  <PlaceholderField disabled placeholder="Disabled input" />
 </Playground>
