Start multiline support

--- a/packages/components/src/PlaceholderField/PlaceholderField.mdx
+++ b/packages/components/src/PlaceholderField/PlaceholderField.mdx
@@ -20,6 +20,7 @@ Placeholder fields are a web component that use an auto-generated `<label>` to s
   <PlaceholderField size="small" placeholder="Small input" />
   <PlaceholderField placeholder="Normal input" />
   <PlaceholderField size="large" placeholder="Large input" />
+  <PlaceholderField multiline placeholder="Multiline input" />
 </Playground>
 
 
