--- a/packages/components/src/PlaceholderField/PlaceholderField.mdx
+++ b/packages/components/src/PlaceholderField/PlaceholderField.mdx
@@ -21,6 +21,7 @@ Placeholder fields are a web component that use an auto-generated `<label>` to s
   <PlaceholderField placeholder="Normal input" />
   <PlaceholderField size="large" placeholder="Large input" />
   <PlaceholderField multiline placeholder="Multiline input" />
+  <PlaceholderField multiline autoexpand rows="1" placeholder="Expanding multiline input" />
 </Playground>
 
 
