Add error state

--- a/packages/components/src/TextField/TextField.mdx
+++ b/packages/components/src/TextField/TextField.mdx
@@ -13,7 +13,7 @@ Text fields are used in forms to accept input from users.
 
 <Props of={TextField} />
 
-## Basic Placeholder Field
+## Basic Text Field
 
 <Playground>
   <TextField size="small" placeholder="Small input" />
@@ -22,8 +22,10 @@ Text fields are used in forms to accept input from users.
 </Playground>
 
 
-## Placeholder Field States
+## Text Field States
 
 <Playground>
   <TextField disabled placeholder="Disabled input" />
+  <TextField error placeholder="Invalid input" />
 </Playground>
+
