--- a/packages/components/src/TextField/TextField.mdx
+++ b/packages/components/src/TextField/TextField.mdx
@@ -2,7 +2,7 @@
 name: Text Field
 ---
 
-import { Playground, Props } from 'docz';
+import { Playground, Props } from "docz";
 import TextField from "./TextField";
 
 # Text Field
