Import from index instead.

--- a/packages/components/src/Icon/Icon.mdx
+++ b/packages/components/src/Icon/Icon.mdx
@@ -3,8 +3,7 @@ menu: Components
 ---
 
 import { Playground, Props } from "docz";
-import { Icon } from "./Icon";
-import { IconName } from "./IconName";
+import { Icon, IconName } from "./";
 
 # Icon
 
