--- a/packages/components/src/TextField/TextField.mdx
+++ b/packages/components/src/TextField/TextField.mdx
@@ -3,7 +3,7 @@ name: Text Field
 ---
 
 import { Playground, Props } from "docz";
-import TextField from "./TextField";
+import { TextField } from ".";
 
 # Text Field
 
