Implement sizes and colours

--- a/packages/components/src/InlineLabel/InlineLabel.mdx
+++ b/packages/components/src/InlineLabel/InlineLabel.mdx
@@ -4,3 +4,33 @@ menu: Components
 
 import { Playground, Props } from "docz";
 import { InlineLabel } from ".";
+
+# Inline Label
+
+## Sizes
+
+<Playground>
+  <InlineLabel>Normal Label</InlineLabel>{'\u00A0'}
+  <InlineLabel size="medium">Medium Label</InlineLabel>{'\u00A0'}
+  <InlineLabel size="large">Large Label</InlineLabel>{'\u00A0'}
+</Playground>
+
+## Colours
+
+<Playground>
+  <InlineLabel color="greyBlue">greyBlue</InlineLabel>{'\u00A0'}
+  <InlineLabel color="red">red</InlineLabel>{'\u00A0'}
+  <InlineLabel color="orange">orange</InlineLabel>{'\u00A0'}
+  <InlineLabel color="green">green</InlineLabel>{'\u00A0'}
+  <InlineLabel color="blue">blue</InlineLabel>{'\u00A0'}
+  <InlineLabel color="yellow">yellow</InlineLabel>{'\u00A0'}
+  <InlineLabel color="lime">lime</InlineLabel>{'\u00A0'}
+  <InlineLabel color="purple">purple</InlineLabel>{'\u00A0'}
+  <InlineLabel color="pink">pink</InlineLabel>{'\u00A0'}
+  <InlineLabel color="teal">teal</InlineLabel>{'\u00A0'}
+  <InlineLabel color="yellowGreen">yellowGreen</InlineLabel>{'\u00A0'}
+  <InlineLabel color="blueDark">blueDark</InlineLabel>{'\u00A0'}
+  <InlineLabel color="lightBlue">lightBlue</InlineLabel>{'\u00A0'}
+  <InlineLabel color="indigo">indigo</InlineLabel>
+</Playground>
+
