Remove extra space after last component.

--- a/packages/components/src/InlineLabel/InlineLabel.mdx
+++ b/packages/components/src/InlineLabel/InlineLabel.mdx
@@ -12,7 +12,7 @@ import { InlineLabel } from ".";
 <Playground>
   <InlineLabel>Normal Label</InlineLabel>{'\u00A0'}
   <InlineLabel size="medium">Medium Label</InlineLabel>{'\u00A0'}
-  <InlineLabel size="large">Large Label</InlineLabel>{'\u00A0'}
+  <InlineLabel size="large">Large Label</InlineLabel>
 </Playground>
 
 ## Colours
