--- a/packages/components/src/InlineLabel/InlineLabel.mdx
+++ b/packages/components/src/InlineLabel/InlineLabel.mdx
@@ -10,27 +10,36 @@ import { InlineLabel } from ".";
 ## Sizes
 
 <Playground>
-  <InlineLabel>Normal Label</InlineLabel>{'\u00A0'}
-  <InlineLabel size="medium">Medium Label</InlineLabel>{'\u00A0'}
-  <InlineLabel size="large">Large Label</InlineLabel>
+  <p>
+    <InlineLabel>Normal Label</InlineLabel>
+  </p>
+  <p>
+    <InlineLabel size="medium">Medium Label</InlineLabel>
+  </p>
+  <p>
+    <InlineLabel size="large">Large Label</InlineLabel>
+  </p>
 </Playground>
 
 ## Colours
 
-<Playground>
-  <InlineLabel color="greyBlue">greyBlue</InlineLabel>{'\u00A0'}
-  <InlineLabel color="red">red</InlineLabel>{'\u00A0'}
-  <InlineLabel color="orange">orange</InlineLabel>{'\u00A0'}
-  <InlineLabel color="green">green</InlineLabel>{'\u00A0'}
-  <InlineLabel color="blue">blue</InlineLabel>{'\u00A0'}
-  <InlineLabel color="yellow">yellow</InlineLabel>{'\u00A0'}
-  <InlineLabel color="lime">lime</InlineLabel>{'\u00A0'}
-  <InlineLabel color="purple">purple</InlineLabel>{'\u00A0'}
-  <InlineLabel color="pink">pink</InlineLabel>{'\u00A0'}
-  <InlineLabel color="teal">teal</InlineLabel>{'\u00A0'}
-  <InlineLabel color="yellowGreen">yellowGreen</InlineLabel>{'\u00A0'}
-  <InlineLabel color="blueDark">blueDark</InlineLabel>{'\u00A0'}
-  <InlineLabel color="lightBlue">lightBlue</InlineLabel>{'\u00A0'}
-  <InlineLabel color="indigo">indigo</InlineLabel>
-</Playground>
+| Inline Label                                               | Color         |
+| :--------------------------------------------------------- | :------------ |
+| <InlineLabel color="greyBlue">greyBlue</InlineLabel>       | `greyBlue`    |
+| <InlineLabel color="red">red</InlineLabel>                 | `red`         |
+| <InlineLabel color="orange">orange</InlineLabel>           | `orange`      |
+| <InlineLabel color="green">green</InlineLabel>             | `green`       |
+| <InlineLabel color="blue">blue</InlineLabel>               | `blue`        |
+| <InlineLabel color="yellow">yellow</InlineLabel>           | `yellow`      |
+| <InlineLabel color="lime">lime</InlineLabel>               | `lime`        |
+| <InlineLabel color="purple">purple</InlineLabel>           | `purple`      |
+| <InlineLabel color="pink">pink</InlineLabel>               | `pink`        |
+| <InlineLabel color="teal">teal</InlineLabel>               | `teal`        |
+| <InlineLabel color="yellowGreen">yellowGreen</InlineLabel> | `yellowGreen` |
+| <InlineLabel color="blueDark">blueDark</InlineLabel>       | `blueDark`    |
+| <InlineLabel color="lightBlue">lightBlue</InlineLabel>     | `lightBlue`   |
+| <InlineLabel color="indigo">indigo</InlineLabel>           | `indigo`      |
 
+## Properties
+
+ <Props of={InlineLabel} />
