Icon heading level

--- a/packages/components/src/Icon/Icon.mdx
+++ b/packages/components/src/Icon/Icon.mdx
@@ -31,9 +31,9 @@ meaning and recommended usage.
 
 <Props of={Icon} />
 
-## Available Icons
+---
 
-### Arrows
+## Arrows
 
 | Icon                                       | `IconName`      |
 | :----------------------------------------- | :-------------- |
@@ -45,7 +45,7 @@ meaning and recommended usage.
 | <Icon iconName={IconName.longArrowDown} /> | `longArrowDown` |
 | <Icon iconName={IconName.longArrowUp} />   | `longArrowUp`   |
 
-### Calendar
+## Calendar
 
 | Icon                                      | `IconName`     |
 | :---------------------------------------- | :------------- |
@@ -57,7 +57,7 @@ meaning and recommended usage.
 | <Icon iconName={IconName.task} />         | `task`         |
 | <Icon iconName={IconName.timeline} />     | `timeline`     |
 
-### Files
+## Files
 
 | Icon                                    | `IconName`   |
 | :-------------------------------------- | :----------- |
@@ -72,7 +72,7 @@ meaning and recommended usage.
 | <Icon iconName={IconName.word} />       | `word`       |
 | <Icon iconName={IconName.upload} />     | `upload`     |
 
-### Forms
+## Forms
 
 | Icon                                   | `IconName`  |
 | :------------------------------------- | :---------- |
@@ -86,7 +86,7 @@ meaning and recommended usage.
 | <Icon iconName={IconName.dropdown} />  | `dropdown`  |
 | <Icon iconName={IconName.trash} />     | `trash`     |
 
-### Help
+## Help
 
 | Icon                               | `IconName` |
 | :--------------------------------- | :--------- |
@@ -94,7 +94,7 @@ meaning and recommended usage.
 | <Icon iconName={IconName.help} />  | `help`     |
 | <Icon iconName={IconName.knot} />  | `knot`     |
 
-### Map
+## Map
 
 | Icon                                    | `IconName`   |
 | :-------------------------------------- | :----------- |
@@ -103,7 +103,7 @@ meaning and recommended usage.
 | <Icon iconName={IconName.moveMarker} /> | `moveMarker` |
 | <Icon iconName={IconName.property} />   | `property`   |
 
-### Messaging
+## Messaging
 
 | Icon                                  | `IconName` |
 | :------------------------------------ | :--------- |
@@ -114,7 +114,7 @@ meaning and recommended usage.
 | <Icon iconName={IconName.sms} />      | `sms`      |
 | <Icon iconName={IconName.sms2} />     | `sms2`     |
 
-### User
+## User
 
 | Icon                                        | `IconName`       |
 | :------------------------------------------ | :--------------- |
@@ -126,7 +126,7 @@ meaning and recommended usage.
 | <Icon iconName={IconName.userUnassigned} /> | `userUnassigned` |
 | <Icon iconName={IconName.vcard} />          | `vcard`          |
 
-### Social media
+## Social media
 
 | Icon                                    | `IconName`   |
 | :-------------------------------------- | :----------- |
@@ -140,7 +140,7 @@ meaning and recommended usage.
 | <Icon iconName={IconName.yelp} />       | `yelp`       |
 | <Icon iconName={IconName.youtube} />    | `youtube`    |
 
-### Transaction
+## Transaction
 
 | Icon                                      | `IconName`     |
 | :---------------------------------------- | :------------- |
@@ -150,7 +150,7 @@ meaning and recommended usage.
 | <Icon iconName={IconName.shoppingCart} /> | `shoppingCart` |
 | <Icon iconName={IconName.wallet} />       | `wallet`       |
 
-### Work
+## Work
 
 | Icon                                  | `IconName` |
 | :------------------------------------ | :--------- |
@@ -161,20 +161,20 @@ meaning and recommended usage.
 | <Icon iconName={IconName.timer} />    | `timer`    |
 | <Icon iconName={IconName.work} />     | `work`     |
 
-### Request
+## Request
 
 | Icon                                 | `IconName` |
 | :----------------------------------- | :--------- |
 | <Icon iconName={IconName.request} /> | `request`  |
 
-### Quote
+## Quote
 
 | Icon                                   | `IconName`  |
 | :------------------------------------- | :---------- |
 | <Icon iconName={IconName.quote} />     | `quote`     |
 | <Icon iconName={IconName.quoteCopy} /> | `quoteCopy` |
 
-### Job
+## Job
 
 | Icon                                    | `IconName`   |
 | :-------------------------------------- | :----------- |
@@ -183,7 +183,7 @@ meaning and recommended usage.
 | <Icon iconName={IconName.moveVisits} /> | `moveVisits` |
 | <Icon iconName={IconName.visit} />      | `visit`      |
 
-### Invoice
+## Invoice
 
 | Icon                                      | `IconName`     |
 | :---------------------------------------- | :------------- |
@@ -193,7 +193,7 @@ meaning and recommended usage.
 | <Icon iconName={IconName.paidInvoice} />  | `paidInvoice`  |
 | <Icon iconName={IconName.sendInvoice} />  | `sendInvoice`  |
 
-### Other
+## Other
 
 | Icon                                    | `IconName`   |
 | :-------------------------------------- | :----------- |
@@ -226,7 +226,7 @@ meaning and recommended usage.
 | <Icon iconName={IconName.thumbsUp} />   | `thumbsUp`   |
 | <Icon iconName={IconName.xero} />       | `xero`       |
 
-### Legacy
+## Legacy
 
 | Icon                                | `IconName` |
 | :---------------------------------- | :--------- |
