Fix import path

--- a/packages/components/src/InlineLabel/InlineLabel.mdx
+++ b/packages/components/src/InlineLabel/InlineLabel.mdx
@@ -3,7 +3,7 @@ menu: Components
 ---
 
 import { Playground, Props } from "docz";
-import { InlineLabel } from ".";
+import { InlineLabel } from "./InlineLabel";
 
 # Inline Label
 
