Add inline label description lifted for SG-1
Co-Authored-By: crgec <cairns.craig@gmail.com>

--- a/packages/components/src/InlineLabel/InlineLabel.mdx
+++ b/packages/components/src/InlineLabel/InlineLabel.mdx
@@ -7,6 +7,8 @@ import { InlineLabel } from "./InlineLabel";
 
 # Inline Label
 
+Inline labels are typically used to indicate state/status on objects within the application.
+
 ## Sizes
 
 <Playground>
